fix horizontal scroll

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -42,6 +42,7 @@ html {
 
 body {
   font-family: $madeRegular;
+  overflow-x: hidden;
 }
 
 a {
